working on setting up basic design

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -1,38 +1,21 @@
-header {
-	
-	height: 94px;
-	margin-bottom: 30px;
-	background: #4277b7 url('http://i.imgur.com/Pm5hf.png') repeat-x;
-	
-	h1 {
-		text-indent: -9999px;
-		background: url('http://i.imgur.com/t5AI4.png') no-repeat center;
-		width: 500px;
-		height: 94px;
-		margin: 0;
-		padding: 0;
-	}
-	
+@import '/vendor/styles/lesshat/lesshat';
+
+.navbar-inner {
+  font-size: 16px;
+  position: relative;
+  z-index: 100;
+  background-color: #00a3e3; // layer fill content
+  .box-shadow(~"0 3px 3px rgba(0,0,0,.4)"); // drop shadow
+  .background-image(~"linear-gradient(bottom, rgba(38,139,179,.65) 0%, rgba(22,97,127,.65) 100%)"); // gradient overlay
+  border: none;
 }
 
-@media (max-width: 767px) {
-	
-	// make the header span the entire page width even on small screens
-	header {
-		margin-left: -20px;
-		margin-right: -20px;
-		padding-left: 20px;
-		padding-right: 20px;
-	}
-	
+.navbar .brand {
+  text-shadow: 0px;
+  color: white;
 }
 
-@media (max-width: 540px) {
-	
-	// when the page is too narrow for the 500px logo, switch to a smaller, 300px version (also center it)
-	header h1 {
-		background: url('http://i.imgur.com/8LfcwUs.png') no-repeat center;
-		width: 100%;
-	}
-	
+.navbar .nav > li > a {
+  text-shadow: 0px;
+  color: white;
 }
